# EasyGameNetworking

./: .gitignore  CMakeLists.txt  Doxyfile  QuickGameNetworking.sln  README.md  main.cpp
QuickGameNetworking/: CMakeLists.txt  Messages.h  NetAPI.cpp  NetAPI.h  NetData.cpp  NetData.h  NetMessages.h  NetMessagesBase.cpp  NetMessagesBase.h  NetObject.cpp  NetObject.h  NetObjectDescriptor.cpp  NetObjectDescriptor.h  NetSocket.cpp  NetSocket.h  QuickGameNetworking.vcxproj  QuickGameNetworking.vcxproj.filters  main.cpp  packages.config
html/: CMakeCache_8txt.html  CMakeLists_8txt.html  README_8md.html  annotated.html  classINetData.html  classINetData__coll__graph.map  classINetData__inherit__graph.map  classINetData__inherit__graph.md5  classINetObjectDescriptorData.html  classINetObjectDescriptorData__coll__graph.map  classINetObjectDescriptorData__inherit__graph.map  classINetObjectDescriptorData__inherit__graph.md5  classNetObjectMessageBase.html  classNetObjectMessageBase__coll__graph.map  classNetObjectMessageBase__coll__graph.md5  classNetObjectMessageBase__inherit__graph.map  classNetObjectMessageBase__inherit__graph.md5  classObjectCreationMessage-members.html  classObjectCreationMessage.html  classObjectCreationMessage__coll__graph.map  classObjectCreationMessage__coll__graph.md5  classObjectCreationMessage__inherit__graph.map  classObjectCreationMessage__inherit__graph.md5  classObjectDescriptor-members.html  classObjectDescriptor.html  classObjectDescriptor__coll__graph.map  classObjectDescriptor__inherit__graph.md5  classObjectSyncMemento-members.html  files.html  (+30 more)
(+67 files in other folders)
