cmake_minimum_required (VERSION 2.6)
project (QuickGameNetworking)
find_package(Boost COMPONENTS serialization system thread)
set(CMAKE_BUILD_TYPE Debug)
add_subdirectory (QuickGameNetworking)
add_executable (Main "${PROJECT_SOURCE_DIR}/main.cpp")
target_compile_features(Main PUBLIC cxx_std_17)
target_link_libraries(Main QuickGameNetworking ${Boost_LIBRARIES} GL glfw GLEW)
